semantics/tests/parser/invalid/parse_invalid_binary_integer_literal_with_trailing_underscore.bpl
let binary = 0b101010_101010_